fix: Access' method return types adjusted